// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FloatingActionButton renders correct props with secondary buttons 1`] = `
<View
  pointerEvents="box-none"
  style={
    [
      {
        "justifyContent": "flex-end",
      },
      {
        "margin": 30,
      },
      {
        "alignItems": "flex-end",
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "zIndex": 999,
      },
    ]
  }
>
  <View
    pointerEvents="none"
    style={
      [
        {
          "position": "absolute",
        },
        {
          "alignItems": "center",
          "left": 0,
          "right": 0,
          "top": 7,
        },
        {
          "opacity": 0,
          "transform": [
            {
              "translateY": undefined,
            },
            {
              "scale": undefined,
            },
          ],
        },
      ]
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "width": "100%",
          },
          {
            "justifyContent": "flex-end",
          },
        ]
      }
    >
      <View
        style={
          [
            {
              "flexShrink": 0,
            },
            {
              "alignItems": "flex-end",
              "marginRight": 8,
            },
            {
              "marginHorizontal": 15,
            },
          ]
        }
      >
        <Text
          numberOfLines={1}
          style={
            [
              {},
              {
                "flexShrink": 0,
              },
            ]
          }
        >
          caption1
        </Text>
      </View>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            {
              "alignItems": "center",
              "flexShrink": 0,
              "justifyContent": "center",
            },
            {
              "backgroundColor": "#fff",
              "elevation": 5,
              "shadowColor": "#000",
              "shadowOffset": {
                "height": 5,
                "width": 0,
              },
              "shadowOpacity": 0.3,
              "shadowRadius": 3,
              "size": 40,
            },
            {
              "borderRadius": 20,
              "height": 40,
              "opacity": 1,
              "width": 40,
            },
          ]
        }
        testID="FloatingAction$button0"
      >
        <View
          testId="icon"
        />
      </View>
    </View>
  </View>
  <View
    pointerEvents="none"
    style={
      [
        {
          "position": "absolute",
        },
        {
          "alignItems": "center",
          "left": 0,
          "right": 0,
          "top": 7,
        },
        {
          "opacity": 0,
          "transform": [
            {
              "translateY": undefined,
            },
            {
              "scale": undefined,
            },
          ],
        },
      ]
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "width": "100%",
          },
          {
            "justifyContent": "flex-end",
          },
        ]
      }
    >
      <View
        style={
          [
            {
              "flexShrink": 0,
            },
            {
              "alignItems": "flex-end",
              "marginRight": 8,
            },
            {
              "marginHorizontal": 15,
            },
          ]
        }
      >
        <Text
          numberOfLines={1}
          style={
            [
              {},
              {
                "flexShrink": 0,
              },
            ]
          }
        >
          caption2
        </Text>
      </View>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            {
              "alignItems": "center",
              "flexShrink": 0,
              "justifyContent": "center",
            },
            {
              "backgroundColor": "#fff",
              "elevation": 5,
              "shadowColor": "#000",
              "shadowOffset": {
                "height": 5,
                "width": 0,
              },
              "shadowOpacity": 0.3,
              "shadowRadius": 3,
              "size": 40,
            },
            {
              "borderRadius": 20,
              "height": 40,
              "opacity": 1,
              "width": 40,
            },
          ]
        }
        testID="FloatingAction$button1"
      >
        <View
          testId="icon"
        />
      </View>
    </View>
  </View>
  <View
    pointerEvents="none"
    style={
      [
        {
          "position": "absolute",
        },
        {
          "alignItems": "center",
          "left": 0,
          "right": 0,
          "top": 7,
        },
        {
          "opacity": 0,
          "transform": [
            {
              "translateY": undefined,
            },
            {
              "scale": undefined,
            },
          ],
        },
      ]
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "width": "100%",
          },
          {
            "justifyContent": "flex-end",
          },
        ]
      }
    >
      <View
        style={
          [
            {
              "flexShrink": 0,
            },
            {
              "alignItems": "flex-end",
              "marginRight": 8,
            },
            {
              "marginHorizontal": 15,
            },
          ]
        }
      >
        <Text
          numberOfLines={1}
          style={
            [
              {},
              {
                "flexShrink": 0,
              },
            ]
          }
        >
          caption3
        </Text>
      </View>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            {
              "alignItems": "center",
              "flexShrink": 0,
              "justifyContent": "center",
            },
            {
              "backgroundColor": "#fff",
              "elevation": 5,
              "shadowColor": "#000",
              "shadowOffset": {
                "height": 5,
                "width": 0,
              },
              "shadowOpacity": 0.3,
              "shadowRadius": 3,
              "size": 40,
            },
            {
              "borderRadius": 20,
              "height": 40,
              "opacity": 1,
              "width": 40,
            },
          ]
        }
        testID="FloatingAction$button2"
      >
        <View
          testId="icon"
        />
      </View>
    </View>
  </View>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "alignItems": "center",
          "justifyContent": "center",
        },
        {
          "backgroundColor": "#e74c3c",
          "elevation": 5,
          "shadowColor": "#000",
          "shadowOffset": {
            "height": 5,
            "width": 0,
          },
          "shadowOpacity": 0.3,
          "shadowRadius": 3,
          "size": 54,
        },
        {
          "borderRadius": 27,
          "height": 54,
          "opacity": 1,
          "width": 54,
        },
      ]
    }
    testID="FloatingAction"
  >
    <View
      style={
        [
          {
            "backgroundColor": "#e74c3c",
            "elevation": 5,
            "rippleColor": "rgba(0, 0, 0, 0.4)",
            "shadowColor": "#000",
            "shadowOffset": {
              "height": 5,
              "width": 0,
            },
            "shadowOpacity": 0.3,
            "shadowRadius": 3,
            "size": 54,
          },
          {
            "alignItems": "center",
            "borderRadius": 27,
            "height": 54,
            "justifyContent": "center",
            "width": 54,
          },
        ]
      }
      testID="FloatingAction$IconView"
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "flexShrink": 1,
              "justifyContent": "center",
            },
            {
              "transform": [
                {
                  "rotate": "undefineddeg",
                },
              ],
            },
          ]
        }
      >
        <View
          testId="icon"
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`FloatingActionButton renders correct props without secondary buttons 1`] = `
<View
  pointerEvents="box-none"
  style={
    [
      {
        "justifyContent": "flex-end",
      },
      {
        "margin": 30,
      },
      {
        "alignItems": "flex-end",
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "zIndex": 999,
      },
    ]
  }
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "alignItems": "center",
          "justifyContent": "center",
        },
        {
          "backgroundColor": "#e74c3c",
          "elevation": 5,
          "shadowColor": "#000",
          "shadowOffset": {
            "height": 5,
            "width": 0,
          },
          "shadowOpacity": 0.3,
          "shadowRadius": 3,
          "size": 54,
        },
        {
          "borderRadius": 27,
          "height": 54,
          "opacity": 1,
          "width": 54,
        },
      ]
    }
    testID="FloatingAction"
  >
    <View
      style={
        [
          {
            "backgroundColor": "#e74c3c",
            "elevation": 5,
            "rippleColor": "rgba(0, 0, 0, 0.4)",
            "shadowColor": "#000",
            "shadowOffset": {
              "height": 5,
              "width": 0,
            },
            "shadowOpacity": 0.3,
            "shadowRadius": 3,
            "size": 54,
          },
          {
            "alignItems": "center",
            "borderRadius": 27,
            "height": 54,
            "justifyContent": "center",
            "width": 54,
          },
        ]
      }
      testID="FloatingAction$IconView"
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "flexShrink": 1,
              "justifyContent": "center",
            },
            {
              "transform": [
                {
                  "rotate": "undefineddeg",
                },
              ],
            },
          ]
        }
      >
        <View
          testId="icon"
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`FloatingActionButton vertical position renders position bottom correctly 1`] = `
<View
  pointerEvents="box-none"
  style={
    [
      {
        "justifyContent": "flex-end",
      },
      {
        "margin": 30,
      },
      {
        "alignItems": "flex-end",
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "zIndex": 999,
      },
    ]
  }
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "alignItems": "center",
          "justifyContent": "center",
        },
        {
          "backgroundColor": "#e74c3c",
          "elevation": 5,
          "shadowColor": "#000",
          "shadowOffset": {
            "height": 5,
            "width": 0,
          },
          "shadowOpacity": 0.3,
          "shadowRadius": 3,
          "size": 54,
        },
        {
          "borderRadius": 27,
          "height": 54,
          "opacity": 1,
          "width": 54,
        },
      ]
    }
    testID="FloatingAction"
  >
    <View
      style={
        [
          {
            "backgroundColor": "#e74c3c",
            "elevation": 5,
            "rippleColor": "rgba(0, 0, 0, 0.4)",
            "shadowColor": "#000",
            "shadowOffset": {
              "height": 5,
              "width": 0,
            },
            "shadowOpacity": 0.3,
            "shadowRadius": 3,
            "size": 54,
          },
          {
            "alignItems": "center",
            "borderRadius": 27,
            "height": 54,
            "justifyContent": "center",
            "width": 54,
          },
        ]
      }
      testID="FloatingAction$IconView"
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "flexShrink": 1,
              "justifyContent": "center",
            },
            {
              "transform": [
                {
                  "rotate": "undefineddeg",
                },
              ],
            },
          ]
        }
      >
        <View
          testId="icon"
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`FloatingActionButton vertical position renders position top correctly 1`] = `
<View
  pointerEvents="box-none"
  style={
    [
      {
        "justifyContent": "flex-end",
      },
      {
        "margin": 30,
      },
      {
        "alignItems": "flex-end",
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
        "zIndex": 999,
      },
    ]
  }
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "alignItems": "center",
          "justifyContent": "center",
        },
        {
          "backgroundColor": "#e74c3c",
          "elevation": 5,
          "shadowColor": "#000",
          "shadowOffset": {
            "height": 5,
            "width": 0,
          },
          "shadowOpacity": 0.3,
          "shadowRadius": 3,
          "size": 54,
        },
        {
          "borderRadius": 27,
          "height": 54,
          "opacity": 1,
          "width": 54,
        },
      ]
    }
    testID="FloatingAction"
  >
    <View
      style={
        [
          {
            "backgroundColor": "#e74c3c",
            "elevation": 5,
            "rippleColor": "rgba(0, 0, 0, 0.4)",
            "shadowColor": "#000",
            "shadowOffset": {
              "height": 5,
              "width": 0,
            },
            "shadowOpacity": 0.3,
            "shadowRadius": 3,
            "size": 54,
          },
          {
            "alignItems": "center",
            "borderRadius": 27,
            "height": 54,
            "justifyContent": "center",
            "width": 54,
          },
        ]
      }
      testID="FloatingAction$IconView"
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "flexShrink": 1,
              "justifyContent": "center",
            },
            {
              "transform": [
                {
                  "rotate": "undefineddeg",
                },
              ],
            },
          ]
        }
      >
        <View
          testId="icon"
        />
      </View>
    </View>
  </View>
</View>
`;
